--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "classnames": "^2.3.1",
     "immer": "^9.0.6",
     "node-sass": "4.14.1",
+    "normalize.css": "^8.0.1",
     "react": "^17.0.2",
     "react-app-rewired": "^2.1.8",
     "react-dom": "^17.0.2",
