--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,8 @@
     "jsx": "react-jsx"
   },
   "include": [
-    "src"
-, "src/static/icon-font"  ],
+    "src",
+    "src/static/icon-font"
+  ],
   "extends": "./tsconfig.path.json"
 }
